# python-package-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
sample_package/: __main__.py  helpers.py  sample_package.py
tests/: test_helpers.py  test_sample_package.py
